--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-responsive": "^10.0.0",
-    "sass": "^1.77.4"
+    "sass": "^1.77.4",
+    "sharp": "^0.33.4"
   },
   "devDependencies": {
     "eslint": "^8",
